--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/zWxvyFVP/csk-vskkr.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/Lz3QzBs2/lsg-vs-gt.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/7xxTCzYg/1000114079.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.ibb.co/p6gMzQR2/srhvs-pbks.png
+    " alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
