--- a/starsports1english.html
+++ b/starsports1english.html
@@ -24,7 +24,7 @@
 </head>
 <body class="dark-mode with-custom-scrollbars with-custom-css-scrollbars">
 
-    <video id="player" controls preload="metadata" class="plyr" allowfullscreen playsinline>
+    <video id="player" controls preload="auto" class="plyr" allowfullscreen playsinline poster="https://i.ibb.co/B2fXpsrQ/STARSPORTS.jpg">
         <source src="https://maxplay-tv.fun/cric.php?id=star1in" type="application/x-mpegURL">
     </video>
 
@@ -38,9 +38,6 @@
                 controls: [
                     'play-large', // The large play button in the center
                     'play', // Play/pause toggle
-                    'progress', // Progress bar and scrubber
-                    'current-time', // The current time of playback
-                    'duration', // The full duration of the media
                     'mute', // Volume control
                     'volume', // Volume slider
                     'captions', // Toggle captions
