--- a/hindi4k.html
+++ b/hindi4k.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>pbks csk</h2>
+  <h2>srh vs pbks</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
@@ -92,7 +92,7 @@
   <hr>
 
   <iframe src="test.html?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
   <h3>to get latest updates of servers</h3>
@@ -110,9 +110,9 @@
   <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
-  <iframe src="https://ifarma.embedct.space/iframe/frame.php" title="Video Player 3" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
+  <iframe src="https://user4580.ifrem.net/iframe/frame.php" title="Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
@@ -138,7 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
       try {
         var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://criccoder264.pages.dev/sse.m3u8",
+          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17443778803600~hmac=35d8f03492cf91d3b1098b718e8a30d9362590d6cc0072f8e52c4e0fc0962f26",
           width: "100%",
           aspectratio: "16:9",
           preload: "metadata",
@@ -184,7 +184,7 @@
   <hr>
 
   <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
   <br>
@@ -204,9 +204,29 @@
   <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
-  <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
-    allowfullscreen>
-  </iframe>
+  <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
+  <br>
+  <br>
+  <h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+  </a>
+  <br>
+  <h2>player 7</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
+  <iframe src="starsports1english.html" title="Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
