--- a/hindi.html
+++ b/hindi.html
@@ -58,7 +58,7 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>lsg vs gt</h2>
+  <h2>rr v rcb</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
