--- a/hindi.html
+++ b/hindi.html
@@ -58,12 +58,29 @@
   </a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>rr v rcb</h2>
+  <h2>lsg vs cks</h2>
   <hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
+  <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
+</iframe>
+<h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
 
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+  </a>
+  <br>
+<h2>player 2</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
   <div id="player"></div>
   <script>
     var player = new Playerjs({
@@ -87,7 +104,7 @@
   <br>
 
   <br>
-  <h2>player 2 (audio boost in audio setting)</h2>
+  <h2>player 3 (audio boost in audio setting)</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
@@ -95,6 +112,7 @@
     allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
+</iframe>
   <h3>to get latest updates of servers</h3>
   <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
     rel="noopener noreferrer">
@@ -107,12 +125,24 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 3</h2>
+  <h2>player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
-  <iframe src="https://user4580.ifrem.net/iframe/frame.php" title="Video Player 3" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
-</iframe>
+  <button id="loadIframeButton" style="font-size: 2em; padding: 20px 40px;">Load player</button>
+
+<iframe id="myIframePlaceholder" width="640" height="360" frameborder="0" allowfullscreen style="border: none; display: none;"></iframe>
+
+<script>
+  const loadIframeButton = document.getElementById('loadIframeButton');
+  const iframePlaceholder = document.getElementById('myIframePlaceholder');
+
+  loadIframeButton.addEventListener('click', () => {
+    iframePlaceholder.src = "https://user4580.ifrem.net/iframe/frame.php";
+    iframePlaceholder.style.display = 'block'; // Show the iframe
+    loadIframeButton.style.display = 'none'; // Hide the button after loading
+  });
+</script>
+<hr>
   <br>
   <br>
   <h3>to get latest updates of servers</h3>
@@ -127,7 +157,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>Player 4</h2>
+  <h2>Player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> 
   <div id="wrapper_tsport1">
@@ -179,7 +209,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 5</h2>
+  <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
@@ -201,7 +231,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 6</h2>
+  <h2>player 7</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
@@ -221,7 +251,7 @@
     Join us on Telegram chnanel
   </a>
   <br>
-  <h2>player 7</h2>
+  <h2>player 8</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="starsports1english.html" title="Video Player 3" frameborder="0"
