--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img loading="lazy" src="https://i.ibb.co/nMht4wmY/rrvs-rcb.jpg" alt="Sample Image" />
+    <img loading="lazy" src="https://i.postimg.cc/Y0Kp8XLK/1000117009.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
