no more streams

--- a/hindi4k.html
+++ b/hindi4k.html
@@ -1,282 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IPL 2025 LIVE</title>
-  <meta name="description"
-    content="Watch ipl Championship matches online with high-quality streaming. Enjoy live cricket action on ipl Live Streaming. Stream in multiple languages including Hindi, English, and regional languages." />
-  <meta name="keywords"
-    content="ipl Live Streaming, Star Sports Hindi, Star Sports 4K, FHD Hindi, ipl matches, cricket live streaming, Hindi cricket, regional languages cricket, ipl online, watch ipl, ipl streaming, cricket online" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dheereshagrwal/coloured-icons@master/src/app/ci.min.css" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <!-- Load JW Player library once in head -->
-  <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
-  <script defer src="https://us.umami.is/script.js" data-website-id="bff6007c-ed56-49bc-9843-9cd42c50bab5"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F45FCSPRMB"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-    gtag("config", "G-F45FCSPRMB");
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="playerjs2.js"></script>
+  <meta charset="UTF-8">
+  <title>end of era no more streams</title>
   <style>
-
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+      display: block;
+    }
   </style>
 </head>
-
-<body onload="inviteToTelegram()">
-  <!-- crisp live cahat starts -->
-  <script
-    type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "b9273d3d-d002-4a94-bce7-a6310ff2b104"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
-  <!-- crisp live cahat starts end-->
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-  </nav>
-  <a href="https://lnk.bio/NEWBIENOOB" class="responsive-gif">
-    <img loading="lazy" src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF" />
-  </a>
-  <a href="https://ublockorigin.com/" class="responsive-link">
-    <img loading="lazy" src="https://i.ibb.co/bjNG66z1/2.png" alt="Sample Image" width="350px" height="180" />
-  </a>
-  <h1>ipl 2025 live</h1>
-  <h2>match 1</h2>
-  <h2>dc vs mi</h2>
-  <hr>
-  <h2>player 1</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-
-  <div id="player"></div>
-  <script>
-    var player = new Playerjs({
-      id: "player",
-      file: "match1.txt",
-      poster: "https://i.ibb.co/1G4N2fgF/welocome-to-our-website.png"
-    });
-  </script>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-
-  <br>
-  <h2>player 2 (audio boost in audio setting)</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-
-  <iframe src="test.html?url=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8" title="Video Player 2" frameborder="0"
-    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-    loading="lazy">
-  </iframe>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>player 3</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> <!-- Added separator -->
-  <iframe src="https://user4580.ifrem.net/iframe/frame.php" title="Video Player 3" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
-</iframe>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>Player 4</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> 
-  <div id="wrapper_tsport1">
-    <div id="pcPlayer_tsport1"></div>
-  </div>
-  <script>
-    // No need to dynamically load JWPlayer script again, it's in the head
-    document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
-      try {
-        var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
-          file: "https://live-test.tsports.com/live-02/index.m3u8?hdnts=URLPrefix=aHR0cHM6Ly9saXZlLXRlc3QudHNwb3J0cy5jb20v~Expires=17443778803600~hmac=35d8f03492cf91d3b1098b718e8a30d9362590d6cc0072f8e52c4e0fc0962f26",
-          width: "100%",
-          aspectratio: "16:9",
-          preload: "metadata",
-          autostart: false,
-          fallback: {
-            message: "Your browser does not support the video format or the player.",
-          },
-          events: {
-            onError: function (e) { // Use onError (capital O)
-              console.error("JW Player error (TSPORT 1):", e);
-              // alert("A JW Player error occurred (TSPORT 1): " + e.message); // Alert can be annoying
-            },
-            // Add other events if needed
-            ready: function (event) { console.log("Player ready (TSPORT 1)", event); },
-          },
-          pip: true,
-          controls: true,
-          title: "TSPORTS",
-          quality: { defaultAuto: true },
-        });
-      } catch (error) {
-        console.error("Failed to initialize JW Player (TSPORT 1):", error);
-        document.getElementById("pcPlayer_tsport1").innerHTML = "<p>Error loading video player (TSPORT 1).</p>";
-      }
-    });
-  </script>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>player 5</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-
-  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
-    allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-    loading="lazy">
-  </iframe>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>player 6</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-  <iframe src="starsports1hindi.html"Video Player 3" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
-</iframe>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <h2>player 7</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr>
-  <iframe src="starsports1english.html" title="Video Player 3" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen >
-</iframe>
-  <br>
-  <br>
-  <h3>to get latest updates of servers</h3>
-  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
-    rel="noopener noreferrer">
-    <i class="fab fa-whatsapp"></i>
-    Join us on Whatsapp chnanel
-  </a>
-
-  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
-    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
-    Join us on Telegram chnanel
-  </a>
-  <br>
-  <br>
-  <h2>
-    Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
-  </h2>
-  <button id="followUsBtn">Follow Us</button>
-
-  <div id="followUsModal" class="modal">
-    <div class="modal-content">
-      <span class="close-button">&times;</span>
-      <h2>Follow Us</h2>
-      <p class="blue-text">Connect with us on social media:</p>
-      <a href="https://www.linkedin.com/in/newbienoob/" target="_blank">
-        <img loading="lazy" src="https://i.ibb.co/Rk5LY4Kk/linkedin.png"
-          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="LinkedIn" />
-      </a>
-      <a href="https://github.com/NOOBGLITCH" target="_blank">
-        <img loading="lazy" src="https://i.ibb.co/VWntHwKD/github.png" style="height: 45px; vertical-align: middle;"
-          alt="GitHub" />
-      </a>
-      <a href="https://www.instagram.com/NEWBIENOOBO" target="_blank">
-        <img loading="lazy" src="https://i.ibb.co/Fbs4Ct9C/inastagram.png"
-          style="height: 45px; vertical-align: middle; margin-right: 5px;" alt="Instagram" />
-      </a>
-      <a href="https://x.com/NEWBIENOOBO" target="_blank">
-        <img loading="lazy" src="https://i.ibb.co/xtJgXtD9/twitter.png"
-          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Twitter" />
-      </a>
-      <a href="https://telegram.me/newbienoobbot" target="_blank">
-        <img loading="lazy" src="https://i.ibb.co/ks9HGdCS/telegram.png"
-          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Telegram" />
-      </a>
-    </div>
-  </div>
-
-  <script src="script.js"></script>
-  <script src="script2.js"></script>
+<body>
+  <iframe src="https://teletype.in/@newbienoobo/ipllive2025" allowfullscreen></iframe>
 </body>
-
 </html>
