--- a/hindi.html
+++ b/hindi.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>end of era no more streams</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       height: 100%;
@@ -10,15 +11,28 @@
       padding: 0;
       overflow: hidden;
     }
-    iframe {
+    body {
       width: 100vw;
       height: 100vh;
+    }
+    .iframe-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
       border: none;
       display: block;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://teletype.in/@newbienoobo/ipllive2025" allowfullscreen></iframe>
+  <div class="iframe-container">
+    <iframe src="https://teletype.in/@newbienoobo/ipllive2025" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
