revert back final update

--- a/index.html
+++ b/index.html
@@ -1,38 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>end of era no more streams</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-    body {
-      width: 100vw;
-      height: 100vh;
-    }
-    .iframe-container {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-    }
-  </style>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <script defer src="https://us.umami.is/script.js" data-website-id="bff6007c-ed56-49bc-9843-9cd42c50bab5"></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F45FCSPRMB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-F45FCSPRMB');
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>IPL 2025 LIVE</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-  <div class="iframe-container">
-    <iframe src="https://teletype.in/@newbienoobo/ipllive2025" allowfullscreen></iframe>
+  <!-- crisp live cahat starts -->
+  <script
+    type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "b9273d3d-d002-4a94-bce7-a6310ff2b104"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
+  <!-- crisp live cahat starts end-->
+
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+  </nav>
+  <br>
+  <div id="container-2dfd44a3ba0b9b3c202550d835c5558c"></div>
+  <div class="inputBox_container">
+    <svg class="search_icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" alt="search icon">
+      <path
+        d="M46.599 46.599a4.498 4.498 0 0 1-6.363 0l-7.941-7.941C29.028 40.749 25.167 42 21 42 9.402 42 0 32.598 0 21S9.402 0 21 0s21 9.402 21 21c0 4.167-1.251 8.028-3.342 11.295l7.941 7.941a4.498 4.498 0 0 1 0 6.363zM21 6C12.717 6 6 12.714 6 21s6.717 15 15 15c8.286 0 15-6.714 15-15S29.286 6 21 6z">
+      </path>
+    </svg>
+    <input class="inputBox" id="inputBox" type="text" placeholder="Search For Languages">
   </div>
+  <br>
+  <a href="http://telegram.dog/NEWBIEN00B" class="card">
+    <img loading="lazy" src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
+    <div class="card-content">
+      <div class="card-title">Telegram</div>
+    </div>
+  </a>
+
+  <a href="https://github.com/NOOBGLITCH" class="card">
+    <img loading="lazy" src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg"
+      alt="Sample Image" />
+    <div class="card-content">
+      <div class="card-title">Github</div>
+    </div>
+  </a>
+
+  <a href="hindi.html" class="card">
+    <img loading="lazy" src="https://i.ibb.co/7xYD9T9V/1000117604.jpg" alt="Sample Image" />
+    <div class="card-content">
+      <div class="card-title">Match no 1 Hindi</div>
+    </div>
+  </a>
+
+  <a href="hindi4k.html" class="card">
+    <img loading="lazy" src="https://i.ibb.co/TDNhSV2p/dc-vs-mi.jpg" alt="Sample Image" />
+    <div class="card-content">
+      <div class="card-title">Match no 2 hindi</div>
+    </div>
+  </a>
+
+  <br>
+  <h3>to get latest updates of servers</h3>
+  <a href="https://chat.whatsapp.com/DbBq9zDGtV54fKfVrIjaA4" class="whatsapp-button" target="_blank"
+    rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    Join us on Whatsapp chnanel
+  </a>
+
+  <a href="https://telegram.dog/iplislive2025" class="telegram-button" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-telegram fa-2xs" style="color: #74C0FC;"></i>
+    Join us on Telegram chnanel
+  </a>
+  <br>
+  <br>
+  <h2>This website was developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>.</h2>
+  <script src="//jwpsrv.com/library/O4mPlqeTEeK_viIACpYGxA.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
