--- a/player.html
+++ b/player.html
@@ -54,7 +54,7 @@
     }
   </style>
   <!-- Load your custom PlayerJS file -->
-  <script src="https://cdn.jsdelivr.net/gh/NOOBGLITCH/iplweb2024/playerjs2.js"></script>
+  <script src="playerjs2.js"></script>
 </head>
 <body>
   <div id="playerjs"></div>
