--- a/ccrichdclapper.html
+++ b/ccrichdclapper.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Live Sports - Clappr Clean</title>
+  <title>Live Sports - Clappr Landscape</title>
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
 
@@ -16,18 +16,11 @@
       background: #000; overflow: hidden;
       font-family: Arial, sans-serif;
     }
-    #player {
-      width: 100%; height: 100%;
-      background: #000;
-    }
-
+    #player { width: 100%; height: 100%; background: #000; }
     .watermark {
-      position: absolute;
-      bottom: 10%;
-      right: 10px;
-      opacity: .5; font-weight: bold;
-      pointer-events: none;
-      color: #fff; z-index: 2002;
+      position: absolute; bottom: 10%; right: 10px;
+      opacity: .5; color: #fff; font-weight: bold;
+      pointer-events: none; z-index: 2002;
     }
   </style>
 </head>
@@ -81,15 +74,14 @@
 
     initClappr();
 
-    // 📱 Gyroscope-based auto-landscape for Android
-    if (screen.orientation && screen.orientation.lock) {
-      window.addEventListener("deviceorientation", () => {
-        // if device tilts enough horizontally, request landscape lock
-        if (Math.abs(window.orientation) === 90) {
-          screen.orientation.lock("landscape").catch(()=>{});
-        }
-      });
-    }
+    // 📱 Force LANDSCAPE after entering fullscreen
+    document.addEventListener("fullscreenchange", () => {
+      if (document.fullscreenElement && screen.orientation && screen.orientation.lock) {
+        screen.orientation.lock("landscape").catch(err => {
+          console.log("Orientation lock failed:", err);
+        });
+      }
+    });
   </script>
 </body>
 </html>
