--- a/shakaplayer.html
+++ b/shakaplayer.html
@@ -1,140 +1,187 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Prime Video </title>
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/2048px-Telegram_logo.svg.png" type="image/png" sizes="250x250">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.1.1/shaka-player.ui.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.1.1/controls.min.css" crossorigin="anonymous">
-    <link rel="preload" href="https://a201aivottlinear-a.akamaihd.net/OTTB/pdx-nitro/live/clients/dash/enc/xko28jj0cp/out/v1/190f1d69a3d5467f8fb7d9df4339bc49/cenc.mpd" as="fetch" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title>Live Sports - Custom Shaka Player</title>
+  <meta name="referrer" content="no-referrer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        /* Overflow menu style */
-        .shaka-overflow-menu {
-            background-color: rgb(41, 41, 163);
-            color: rgb(153, 153, 153);
-        }
+  <!-- Shaka Player -->
+  <script src="https://cdn.jsdelivr.net/npm/shaka-player@4.13.3/dist/shaka-player.ui.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/shaka-player@4.13.3/dist/controls.min.css">
 
-        .shaka-overflow-menu button:hover {
-            background-color: rgb(45, 45, 45);
-        }
+  <style>
+    html, body {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+      background: #000;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+    .shaka-video-container, video {
+      width: 100%; height: 100%;
+      display: block;
+      background: #000;
+    }
 
-        .shaka-overflow-button-label {
-            color: rgb(245, 245, 245);
-        }
+    /* Remove top gradient */
+    .shaka-top-controls { display: none !important; }
 
-        .shaka-current-selection-span {
-            color: rgb(202, 202, 202);
-        }
+    /* Bottom control bar */
+    .shaka-controls-container {
+      background: rgba(0, 0, 0, 0.7) !important;
+      font-size: 14px;
+      padding: 5px 10px;
+    }
+    .shaka-control-button { color: #fff !important; }
+    .shaka-overflow-menu {
+      background: rgba(20,20,20,0.95) !important;
+    }
 
-        .material-icons-round {
-            color: rgb(230, 230, 230);
-        }
+    /* Big center play button */
+    .shaka-big-play-button {
+      background: #666 !important;
+      border: 3px solid #fff !important;
+      border-radius: 50% !important;
+      width: 100px !important;
+      height: 100px !important;
+      font-size: 48px !important;
+      color: #fff !important;
+      display: flex !important;
+      justify-content: center;
+      align-items: center;
+      opacity: 0.9;
+      transition: opacity 0.5s ease;
+    }
+    .shaka-big-play-button:hover {
+      background: #888 !important;
+      opacity: 1;
+    }
 
-        /* Overflow sub menu style */
-        .shaka-settings-menu {
-            background-color: rgb(35, 35, 35);
-            color: rgb(255, 255, 255);
-        }
+    /* Loader */
+    #loadingOverlay {
+      position: fixed;
+      top:0; left:0; width:100%; height:100%;
+      background: rgba(0,0,0,0.9);
+      display: flex; flex-direction: column;
+      justify-content: center; align-items: center;
+      z-index: 2000; color: #fff; font-size: 18px;
+      opacity: 1; transition: opacity 1s ease;
+    }
+    #loadingOverlay.hide { opacity:0; pointer-events:none; }
+    .loader {
+      border: 5px solid rgba(255,255,255,0.2);
+      border-top: 5px solid #fff;
+      border-radius: 50%;
+      width: 60px; height: 60px;
+      margin-bottom: 20px;
+      animation: spin 1.2s linear infinite;
+    }
+    @keyframes spin { to { transform:rotate(360deg);} }
 
-        .shaka-settings-menu button {
-            color: rgb(255, 255, 255);
-        }
-
-        .shaka-settings-menu button:hover {
-            background-color: rgb(45, 45, 45);
-        }
-    </style>
+    /* Watermark */
+    .watermark {
+      position: absolute;
+      bottom: 10%;
+      right: 10px;
+      opacity: .5;
+      font-weight: bold;
+      pointer-events: none;
+      color: #fff;
+      z-index: 10;
+    }
+  </style>
 </head>
+<body>
+  <!-- Player -->
+  <div data-shaka-player-container class="shaka-video-container">
+    <video id="video" data-shaka-player class="shaka-video" playsinline></video>
+  </div>
+  <div class="watermark">@NOOBGLITCH</div>
 
-<body bgcolor="black" style="margin:0">
-    <center>
-        <div data-shaka-player-container style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover">
-            <video  playsinline data-shaka-player id="video"
-                   poster="https://www.disneystar.com/media/2231/7e25132017-009.jpg?width=1920&height=1080&mode=max&slimmage=true"
-                   style="width:100%;height:100%"></video>
-        </div>
-    </center>
+  <!-- Smooth Loader -->
+  <div id="loadingOverlay">
+    <div class="loader"></div>
+    <p>Loading stream...</p>
+  </div>
 
-        <script>
+  <script>
+    const apiUrl = "https://raw.githubusercontent.com/abusaeeidx/CricHd-playlists-Auto-Update-permanent/main/api.json";
+    const urlParams = new URLSearchParams(window.location.search);
+    let targetId = urlParams.get("id") || "starhindi"; // default channel
+    const video   = document.getElementById("video");
+    const loader  = document.getElementById("loadingOverlay");
+    let player, ui;
+    let currentUrl = "";
 
+    async function initPlayer() {
+      if (!shaka.Player.isBrowserSupported()) {
+        loader.querySelector("p").innerText = "Browser not supported!";
+        return;
+      }
+      player = new shaka.Player(video);
 
-        async function init() {
-            let e = document.getElementById("video"),
-                r = e.ui,
-                n = r.getControls(),
-                o = n.getPlayer();
+      ui = new shaka.ui.Overlay(player, document.querySelector('.shaka-video-container'), video);
+      ui.configure({
+        addBigPlayButton: true,
+        controlPanelElements: [
+          'time_and_duration',
+          'mute', 'volume',
+          'rewind', 'fast_forward', 'play_pause',
+          'spacer',
+          'picture_in_picture',
+          'cast',
+          'fullscreen',
+          'overflow_menu'
+        ],
+        overflowMenuButtons: [
+          'quality',
+          'captions',
+          'playback_rate',
+          'language'
+        ]
+      });
 
-            // Faster startup and reduced buffering
-            o.configure({
-                drm: {
-                    clearKeys: {
-                        "1779c27b9d077a3ba0c9cc1bb9a94b9f": "cc5cf3b7928fb9e0a1ee6a8b566f0a8e"
-                    }
-                },
-               streaming: {
-                    startAtSegmentBoundary: true, // Start playback exactly at segment boundary
-                    ignoreTextStreamFailures: true, // Ignore subtitle loading issues
-                    rebufferingGoal: 1, // Lower rebufferingGoal for faster resume
-                    bufferingGoal: 1, // Lower bufferingGoal for faster start
-                    bufferBehind: 1, // Lower bufferBehind to free memory
-                    autoLowLatencyMode: true, // Enable auto low latency if available
-                    lowLatencyMode: true, // Enable low-latency streaming
-                    jumpLargeGaps: true, // Allow skipping over gaps in the stream
-                    inaccurateManifestTolerance: 0.1, // Faster manifest synchronization
-                    stallEnabled: true // Disable stall detection for faster start
-                },
-                manifest: {
-                    dash: {
-                        ignoreMinBufferTime: true, // Ignore minBufferTime in MPD for faster start
-                        autoCorrectDrift: true // Auto-correct time drift
-                    }
-                }
-            });
+      await loadStream();
+      setInterval(loadStream, 10 * 60 * 1000); // refresh every 10min
+    }
 
-            // UI configurations
-            r.configure({
-                controlPanelElements: ["play_pause", "mute", "volume", "spacer", "time_and_duration", "quality", "fullscreen", "overflow_menu"],
-                volumeBarColors: { base: 'rgba(63, 187, 1, 1)', level: 'rgb(255, 69, 0)' },
-                seekBarColors: { base: 'rgb(41, 41, 163)', buffered: 'rgb(35, 99, 3)', played: 'rgba(63, 187, 1, 1)' }
-            });
+    async function loadStream() {
+      try {
+        const res = await fetch(apiUrl);
+        if (!res.ok) throw new Error("Failed to fetch API");
+        const data = await res.json();
+        const channel = data.find(item => item.id === targetId);
 
-            window.player = o;
-            window.ui = r;
-
-            o.addEventListener("error", onPlayerErrorEvent);
-            n.addEventListener("error", onUIErrorEvent);
-
-            // Load the video as quickly as possible
-            try {
-                await o.load("https://a201aivottlinear-a.akamaihd.net/OTTB/lhr-nitro/clients/dash/enc/f60kqesunw/out/v1/a435ed7a00f947deb4369b46d8f2fb70/cenc.mpd");
-                console.log("The video has now been loaded instantly!");
-            } catch (a) {
-                onPlayerError(a);
-            }
+        if (!channel) {
+          document.body.innerHTML = "<h2 style='color:white;text-align:center;'>Stream not found</h2>";
+          return;
         }
+        const freshUrl = channel.link;
+        if (freshUrl !== currentUrl) {
+          currentUrl = freshUrl;
+          await player.load(freshUrl);
+          console.log("🔄 Stream refreshed:", new Date().toLocaleTimeString());
 
-        function onPlayerErrorEvent(e) {
-            onPlayerError(e.detail);
+          // Hide loader smoothly
+          loader.classList.add("hide");
         }
+      } catch (err) {
+        console.error("Error loading stream:", err);
+        loader.querySelector("p").innerText = "Failed to load stream";
+      }
+    }
 
-        function onPlayerError(e) {
-            console.error("Error code", e.code, "object", e);
-        }
+    document.addEventListener("DOMContentLoaded", initPlayer);
 
-        function onUIErrorEvent(e) {
-            onPlayerError(e.detail);
-        }
-
-        function initFailed(e) {
-            console.error("Unable to load the UI library!");
-        }
-
-        document.addEventListener("shaka-ui-loaded", init);
-        document.addEventListener("shaka-ui-load-failed", initFailed);
-    </script>
-
+    // 📱 Force LANDSCAPE when entering fullscreen
+    document.addEventListener("fullscreenchange", () => {
+      if (document.fullscreenElement && screen.orientation && screen.orientation.lock) {
+        screen.orientation.lock("landscape").catch(err => {
+          console.log("Orientation lock failed:", err);
+        });
+      }
+    });
+  </script>
 </body>
-
 </html>
