--- a/emebedevideoplayer.html
+++ b/emebedevideoplayer.html
@@ -1,50 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Multi Stream Players</title>
+  <title>Extension Players</title>
   <style>
     body {
       background: #111;
       color: white;
-      text-align: center;
       font-family: sans-serif;
+      text-align: center;
     }
     iframe {
-      width: 1280px;
-      height: 720px;
-      border: 5px solid #00ff99; /* neon green border highlight */
-      border-radius: 8px;
+      width: 80%;
+      max-width: 960px;
+      height: 540px;
       margin: 20px 0;
-      box-shadow: 0 0 20px rgba(0, 255, 153, 0.7);
-      background: black;
+      border: 5px solid #0f9;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,255,153,.6);
     }
     h2 {
-      margin-top: 30px;
+      margin: 10px;
       color: #0ff;
-      font-size: 1.2rem;
     }
   </style>
 </head>
 <body>
 
   <h2>Player 1 – DoubleClick SSAI</h2>
-  <iframe 
-    allow="encrypted-media *" 
-    src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://pubads.g.doubleclick.net/ssai/event/nmQFuHURTYGQBNdUG-2Qdw/master.m3u8">
-  </iframe>
+  <iframe allow="encrypted-media *" 
+          src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://pubads.g.doubleclick.net/ssai/event/nmQFuHURTYGQBNdUG-2Qdw/master.m3u8"></iframe>
 
   <h2>Player 2 – Google DAI</h2>
-  <iframe 
-    allow="encrypted-media *" 
-    src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://dai.google.com/ssai/event/nmQFuHURTYGQBNdUG-2Qdw/master.m3u8">
-  </iframe>
+  <iframe allow="encrypted-media *" 
+          src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://dai.google.com/ssai/event/nmQFuHURTYGQBNdUG-2Qdw/master.m3u8"></iframe>
 
   <h2>Player 3 – TataPlay TEN 3</h2>
-  <iframe 
-    allow="encrypted-media *" 
-    src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://tataplay.slivcdn.com/hls/live/2020591-b/TEN3HD/hdntl=exp=1750582085~acl=%2f*~id=9e40d10a-ddc8-413e-8bad-fc250d39a4c7~data=hdntl~hmac=8a461045379b43fb696b19ba5f49f38d5017755a198550f54e5d47ecd4b974ae/master_1300.m3u8">
-  </iframe>
+  <iframe allow="encrypted-media *" 
+          src="chrome-extension://opmeopcambhfimffbomjgemehjkbbmji/pages/player.html#https://tataplay.slivcdn.com/hls/live/2020591-b/TEN3HD/hdntl=exp=1750582085~acl=%2f*~id=9e40d10a-ddc8-413e-8bad-fc250d39a4c7~data=hdntl~hmac=8a461045379b43fb696b19ba5f49f38d5017755a198550f54e5d47ecd4b974ae/master_1300.m3u8"></iframe>
 
 </body>
 </html>
