--- a/ccrichdclapper.html
+++ b/ccrichdclapper.html
@@ -31,7 +31,7 @@
   <script>
     const apiUrl = "https://raw.githubusercontent.com/abusaeeidx/CricHd-playlists-Auto-Update-permanent/main/api.json";
     const urlParams = new URLSearchParams(window.location.search);
-    let targetId = urlParams.get("id") || "starhindi";
+    let targetId = urlParams.get("id") || "ten1hd";
     let currentUrl = "";
     let clapprPlayer;
 
