--- a/playercopy.html
+++ b/playercopy.html
@@ -1,84 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>noobgltch</title>
-    <link rel="stylesheet" href="https://cxh.pages.dev/style.css">
+  <meta charset="UTF-8">
+  <title>Live Sports - Clappr Landscape</title>
+  <meta name="referrer" content="no-referrer">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+
+  <!-- Clappr -->
+  <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
+
+  <style>
+    html, body {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+      background: #000; overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+    #player { width: 100%; height: 100%; background: #000; }
+    .watermark {
+      position: absolute; bottom: 90%; right: 60px;
+      opacity: .5; color: #fff; font-weight: bold;
+      pointer-events: none; z-index: 2002;
+    }
+  </style>
 </head>
 <body>
-    <style>
-        #player {
-            position: absolute;
-            width: 100% !important;
-            height: 100% !important;
-        }
-    </style>
+  <div id="player"></div>
+  <div class="watermark">@NOOBGLITCH</div>
 
-    <div id="player"></div>
+  <script>
+    const apiUrl = "https://raw.githubusercontent.com/abusaeeidx/CricHd-playlists-Auto-Update-permanent/main/api.json";
+    const urlParams = new URLSearchParams(window.location.search);
+    let targetId = urlParams.get("id") || "ten1hd";
+    let currentUrl = "";
+    let clapprPlayer;
 
-    <script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
+    async function fetchStreamUrl() {
+      const res = await fetch(apiUrl);
+      if (!res.ok) throw new Error("Failed to fetch API");
+      const data = await res.json();
+      const channel = data.find(item => item.id === targetId);
+      if (!channel) throw new Error("Stream not found");
+      return channel.link;
+    }
 
-    <script>
-        var jwScript = document.createElement('script');
-        jwScript.src = "https://content.jwplatform.com/libraries/KB5zFt7A.js";
-        jwScript.async = true;
-        jwScript.onerror = function() {
-            console.error("Failed to load JW Player library.");
-            document.getElementById("player").innerHTML = "<p>Error loading video player.</p>";
-        };
-        document.head.appendChild(jwScript);
+    async function initClappr() {
+      try {
+        currentUrl = await fetchStreamUrl();
+        clapprPlayer = new Clappr.Player({
+          source: currentUrl,
+          parentId: "#player",
+          autoPlay: false,
+          width: "100%", height: "100%",
+          mute: false
+        });
 
-        jwScript.onload = function() {
-            var playerInstance = jwplayer("player").setup({
-                file: "https://9361edfe-185f-40b2-8656-2f450faeef7c.deepnoteproject.com/api/starhindi.m3u8",
-                width: "100%",
-                height: "100%",
-                aspectratio: '16:9',
-                preload: 'metadata',
-                autostart: false,
-                fallback: {
-                    message: "Your browser does not support the video format or the player."
-                },
-                events: {
-                    error: function(e) {
-                        console.error("JW Player error:", e);
-                        alert("A JW Player error occurred: " + e.message);
-                    }
-                },
-                pip: true,
-                controls: true,
-                title: "star sports 1 hndi" // You might want to update the title too
-            });
+        // Refresh stream every 10 min
+        setInterval(async () => {
+          try {
+            const freshUrl = await fetchStreamUrl();
+            if (freshUrl !== currentUrl) {
+              currentUrl = freshUrl;
+              clapprPlayer.load(freshUrl);
+              console.log("🔄 Stream refreshed:", new Date().toLocaleTimeString());
+            }
+          } catch (err) { console.error(err); }
+        }, 10 * 60 * 1000);
 
-            playerInstance.on('controls', function(event) {
-                console.log("Controls event:", event);
-            });
+      } catch (err) {
+        document.body.innerHTML = `<h2 style='color:white;text-align:center;'>${err.message}</h2>`;
+      }
+    }
 
-            playerInstance.on('displayClick', function(event) {
-                console.log("displayClick event:", event);
-            });
+    initClappr();
 
-            playerInstance.on('ready', function(event){
-                console.log("player ready", event);
-            })
-
-            playerInstance.on('visualQuality', function(event){
-                console.log("visual quality changed", event);
-            })
-
-            playerInstance.on('bufferChange', function(event){
-                console.log('buffer change', event);
-            })
-
-            playerInstance.on('metaData', function(event){
-                console.log('meta data', event);
-            })
-
-            playerInstance.on('fullScreen', function(event){
-                console.log('full screen event', event);
-            })
-        };
-    </script>
+    // 📱 Force LANDSCAPE after entering fullscreen
+    document.addEventListener("fullscreenchange", () => {
+      if (document.fullscreenElement && screen.orientation && screen.orientation.lock) {
+        screen.orientation.lock("landscape").catch(err => {
+          console.log("Orientation lock failed:", err);
+        });
+      }
+    });
+  </script>
 </body>
 </html>
